[package]
name = "band-tminus-rs"
version = "0.1.0"
edition = "2021"
description = "T-minus event simulation core: agents predict musical events locally without a shared clock"
license = "MIT"
repository = "https://github.com/SuperInstance/band-tminus-rs"
keywords = ["music", "timing", "prediction", "agent", "clock"]
categories = ["multimedia::audio", "simulation"]

[dependencies]
