[package]
name = "band-tminus-rs"
version = "0.1.0"
edition = "2021"
description = "T-minus event simulation core for Self-Improving Band"
license = "MIT"
repository = "https://github.com/SuperInstance/band-tminus-rs"
keywords = ["midi", "music", "simulation", "event", "tminus"]
categories = ["multimedia::audio", "simulation"]
